# gstd-1.x

./: .arcconfig  .gitignore  AUTHORS  COPYING  COPYING.LESSER  Makefile.am  NEWS  README  autogen.sh  configure.ac  init-gstd  meson.build  meson_options.txt  quick_test.sh  sink_test.sh
docs/reference/gstd/: Makefile.am  gstd-docs.xml  gstd-sections.txt  gstd.types  meson.build
examples/libgstc/: Makefile.am  dynamic_property_change.c  gapless_playback.c  meson.build  mp4_recording.c  simple_pipeline.c
gst_client/: Makefile.am  gst_client.c  gst_client_symbolic_link.sh  meson.build
gstd/: Makefile.am  gstd.c  gstd.h  gstd_action.c  gstd_bus_msg.c  gstd_bus_msg.h  gstd_bus_msg_element.c  gstd_bus_msg_element.h  gstd_bus_msg_info.c  gstd_bus_msg_info.h  gstd_bus_msg_notify.c  gstd_bus_msg_qos.c  gstd_bus_msg_qos.h  gstd_bus_msg_simple.c  gstd_bus_msg_simple.h  gstd_bus_msg_state_changed.c  gstd_bus_msg_state_changed.h  gstd_bus_msg_stream_status.c  gstd_bus_msg_stream_status.h  gstd_callback.c  gstd_callback.h  gstd_chmod.sh  gstd_daemon.c  gstd_daemon.h  gstd_debug.c  gstd_debug.h  gstd_element.c  gstd_element.h  gstd_element_list.c  gstd_element_list.h  gstd_event.c  gstd_event.h  gstd_event_creator.c  gstd_event_creator.h  gstd_event_factory.c  gstd_event_factory.h  gstd_event_handler.c  gstd_event_handler.h  gstd_http.c  gstd_http.h  (+84 more)
init/: Makefile.am  gstd  gstd-check-user-xenv.sh  gstd.conf.in  gstd.in  gstd.init_enable.sh  gstd.service  gstd.service.in  gstd.service_enable.sh  meson.build
libgstc/: Makefile.am  libgstc.c  libgstc.h  libgstc_assert.c  libgstc_assert.h  libgstc_json.c  libgstc_json.h  libgstc_socket.c  libgstc_socket.h  libgstc_thread.c  libgstc_thread.h  meson.build  setup.py
libgstc/C/: libgstc_assert.h  libgstc_thread.c  meson.build
libgstc/JavaScript/: libgstc.js
libgstc/c/: Makefile.am  libgstc.c  libgstc.h  libgstc_assert.c  libgstc_assert.h  libgstc_json.c  libgstc_json.h  libgstc_socket.c  libgstc_socket.h  libgstc_thread.c  libgstc_thread.h  meson.build
libgstc/javascript/: Makefile.am  libgstc.js
libgstc/pygstc/: gstc.py  gstcerror.py  logger.py  tcp.py
libgstc/python/: Makefile.am  gstc.py  gstcerror.py  logger.py  meson.build  setup.py  tcp.py
libgstc/python/debian/: changelog  control  copyright  rules
libgstc/python/pygstc/: gstc.py  gstcerror.py  tcp.py
libgstd/: Makefile.am  gstd.h  gstd_action.c  gstd_action.h  gstd_bus_msg.c  gstd_bus_msg.h  gstd_bus_msg_element.c  gstd_bus_msg_element.h  gstd_bus_msg_notify.c  gstd_bus_msg_notify.h  gstd_bus_msg_qos.c  gstd_bus_msg_qos.h  gstd_bus_msg_simple.c  gstd_bus_msg_simple.h  gstd_bus_msg_state_changed.c  gstd_bus_msg_state_changed.h  gstd_bus_msg_stream_status.c  gstd_bus_msg_stream_status.h  gstd_callback.c  gstd_callback.h  gstd_daemon.c  gstd_debug.c  gstd_debug.h  gstd_element.c  gstd_element.h  gstd_event_creator.c  gstd_event_creator.h  gstd_event_factory.c  gstd_event_factory.h  gstd_event_handler.c  gstd_event_handler.h  gstd_http.c  gstd_http.h  gstd_icreator.c  gstd_icreator.h  gstd_ideleter.c  gstd_ideleter.h  gstd_iformatter.c  gstd_iformatter.h  gstd_ipc.c  (+84 more)
src/: Makefile.am  gstd.c  return_codes.h
tests/gstd/: .gitignore  Makefile.am  meson.build  test_gstd_create.c  test_gstd_element.c  test_gstd_no_create.c  test_gstd_pipeline.c  test_gstd_pipeline_create.c  test_gstd_session.c  test_gstd_state.c
tests/libgstc/: Makefile.am  meson.build  test_libgstc_client.c  test_libgstc_debug.c  test_libgstc_element_get.c  test_libgstc_element_set.c  test_libgstc_json.c  test_libgstc_ping.c  test_libgstc_pipeline_bus_wait.c  test_libgstc_pipeline_bus_wait_async.c  test_libgstc_pipeline_create.c  test_libgstc_pipeline_delete.c  test_libgstc_pipeline_flush_start.c  test_libgstc_pipeline_flush_stop.c  test_libgstc_pipeline_inject_eos.c  test_libgstc_pipeline_list.c  test_libgstc_pipeline_list_elements.c  test_libgstc_pipeline_list_properties.c  test_libgstc_pipeline_pause.c  test_libgstc_pipeline_play.c  test_libgstc_pipeline_seek.c  test_libgstc_pipeline_stop.c  test_libgstc_socket.c
tests/libgstc/C/: Makefile.am  meson.build  test_libgstc_pipeline_flush_start.c  test_libgstc_pipeline_stop.c
tests/libgstc/Python/: test_libgstc_python_event_flush_start.py
tests/libgstc/c/: Makefile.am  meson.build  test_libgstc_client.c  test_libgstc_debug.c  test_libgstc_element_get.c  test_libgstc_element_set.c  test_libgstc_json.c  test_libgstc_ping.c  test_libgstc_pipeline_bus_wait.c  test_libgstc_pipeline_bus_wait_async.c  test_libgstc_pipeline_create.c  test_libgstc_pipeline_delete.c  test_libgstc_pipeline_flush_start.c  test_libgstc_pipeline_flush_stop.c  test_libgstc_pipeline_get_graph.c  test_libgstc_pipeline_get_state.c  test_libgstc_pipeline_inject_eos.c  test_libgstc_pipeline_list.c  test_libgstc_pipeline_list_elements.c  test_libgstc_pipeline_list_properties.c  test_libgstc_pipeline_list_signals.c  test_libgstc_pipeline_pause.c  test_libgstc_pipeline_play.c  test_libgstc_pipeline_seek.c  test_libgstc_pipeline_signal_connect.c  test_libgstc_pipeline_signal_disconnect.c  test_libgstc_pipeline_signal_timeout.c  test_libgstc_pipeline_stop.c  test_libgstc_pipeline_verbose.c  test_libgstc_socket.c  test_libgstc_stats.c
tests/libgstc/pygstc/: Makefile.am  test_libgstc_python_bus_filter.py  test_libgstc_python_bus_read.py  test_libgstc_python_bus_timeout.py  test_libgstc_python_create.py  test_libgstc_python_debug_color.py  test_libgstc_python_debug_enable.py  test_libgstc_python_debug_reset.py  test_libgstc_python_debug_threshold.py  test_libgstc_python_delete.py  test_libgstc_python_element_get.py  test_libgstc_python_element_set.py  test_libgstc_python_event_eos.py  test_libgstc_python_event_flush_start.py  test_libgstc_python_event_flush_stop.py  test_libgstc_python_event_seek.py  test_libgstc_python_init.py  test_libgstc_python_list_elements.py  test_libgstc_python_list_pipelines.py  test_libgstc_python_list_signals.py  (+12 more)
tests/libgstd/: Makefile.am  meson.build  test_libgstd_create.c  test_libgstd_delete.c  test_libgstd_init.c  test_libgstd_read.c  test_libgstd_update.c
(+101 files in other folders)
